# utiplayground

./: CLAUDE.md  EVALUATION.md  LICENSE  Makefile  README.md  TODOs.md  pyproject.toml
data/: patient_notes.txt  sample_patients.json
examples/: input_guardrails.py  output_guardrails.py
reports/: daniel_kim_escalation_20250909_005955.md  daniel_kim_escalation_20250909_010118.md  daniel_kim_escalation_2025_09_04_023727.md  gloria_jones_20250904_123825.md  linda_park_safety_escalation_20250904_122805.md  marcus_lee_escalation_catheter_2025_09_04_025144.md  nina_patel_prescriber_sign_off_20250904_110559.md  olivia_green_20250904_124906.md  sarah_smith_20250904_124605.md  sarah_smith_20250909_010857.md  sarah_smith_20250909_012332.md  sarah_smith_20250909_012921.md  sarah_smith_20250911_042422.md  sarah_smith_gpt-4.1.md  sarah_smith_gpt-5.md  tiffany_mcdonalds_20250904_123946.md
src/: agents_research.py  cli.py  client.py  models.py  prompts.py  server.py  services.py  uti_algo.py  utils.py
src/api/: dependencies.py  main.py  observability.py  rate_limit.py  routes.py
tests/: conftest.py  factories.py  test_client.py  test_endpoints.py  test_integration.py  test_models.py  test_prompts.py  test_server_helpers.py  test_services.py  test_services_focused.py  test_uti_algo.py
